==> apache/nuttx/arch/arm/src/stm32l4/stm32l4_dac.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/analog/dac.h>
#include "arm_internal.h"
#include "arm_arch.h"
#include "chip.h"
#include "stm32l4.h"
#include "stm32l4_dac.h"
#include "stm32l4_rcc.h"
#include "stm32l4_dma.h"
#    define CONFIG_STM32L4_DAC1_DMA_BUFFER_SIZE 1
#    define CONFIG_STM32L4_DAC2_DMA_BUFFER_SIZE 1
#    define DAC1_DMA_CHAN   DMAMAP_DAC1_0
#    define DAC1_DMA_CHAN   DMAMAP_DAC1_1
#    define DAC1_DMA_CHAN   DMACHAN_DAC1_1
#    define DAC1_DMA_CHAN   DMACHAN_DAC1_2
#  define HAVE_DMA
#    define DAC2_DMA_CHAN   DMAMAP_DAC2_0
#    define DAC2_DMA_CHAN   DMAMAP_DAC2_1
#    define DAC2_DMA_CHAN   DMACHAN_DAC2_1
#    define DAC2_DMA_CHAN   DMACHAN_DAC2_2
#  define HAVE_DMA
#    define NEED_TIM6
#    define DAC1_TSEL_VALUE           DAC_CR_TSEL_TIM6
#    define DAC1_TIMER_BASE           STM32L4_TIM6_BASE
#    define DAC1_TIMER_PCLK_FREQUENCY STM32L4_PCLK1_FREQUENCY
#    define NEED_TIM8
#    define DAC1_TSEL_VALUE           DAC_CR_TSEL_TIM8
#    define DAC1_TIMER_BASE           STM32L4_TIM8_BASE
#    define DAC1_TIMER_PCLK_FREQUENCY STM32L4_PCLK2_FREQUENCY
#    define NEED_TIM7
#    define DAC1_TSEL_VALUE DAC_CR_TSEL_TIM7
#    define DAC1_TIMER_BASE STM32L4_TIM7_BASE
#    define NEED_TIM5
#    define DAC1_TSEL_VALUE           DAC_CR_TSEL_TIM5

static void dac_reset(FAR struct dac_dev_s *dev)
{
  irqstate_t flags;

  /* Reset only the selected DAC channel; the other DAC channel must remain
   * functional.
   */

  flags   = enter_critical_section();

#warning "Missing logic"

  leave_critical_section(flags);
}

static int dac_send(FAR struct dac_dev_s *dev, FAR struct dac_msg_s *msg)
{
  FAR struct stm32_chan_s *chan = dev->ad_priv;

  /* Enable DAC Channel */

  stm32l4_dac_modify_cr(chan, 0, DAC_CR_EN);

#ifdef HAVE_DMA
  if (chan->hasdma)
    {
      /* Copy the value to circular buffer. Since dmabuffer is initialized to zero,
       * writing e.g. monotonously increasing values creates a continuously repeating
       * ramp-effect, alternating with periods of zero output.
       *
       * In real use it the dmabuffer should be initialized with a desired pattern
       * beforehand, followed by a single dummy write to initiate circular DMA. If want
       * to write just one value at a time with DMA, set the buffer size to 1 (mostly
       * useful for just testing the functionality).
       */

      chan->dmabuffer[chan->buffer_pos] = (uint16_t)msg->am_data;
      chan->buffer_pos = (chan->buffer_pos + 1) % chan->buffer_len;

      /* Configure the DMA stream/channel.
       *
       * - Channel number
       * - Peripheral address
       * - Direction: Memory to peripheral
       * - Disable peripheral address increment
       * - Enable memory address increment
       * - Peripheral data size: half word
       * - Mode: circular???
       * - Priority: ?
       * - FIFO mode: disable
       * - FIFO threshold: half full
       * - Memory Burst: single
       * - Peripheral Burst: single
       */

      stm32l4_dmasetup(chan->dma, chan->dro, (uint32_t)chan->dmabuffer,
                       chan->buffer_len, DAC_DMA_CONTROL_WORD);

      /* Start the DMA */

      chan->result = -EBUSY;
      stm32l4_dmastart(chan->dma, dac_dmatxcallback, chan, false);

      /* Enable DMA for DAC Channel */

      stm32l4_dac_modify_cr(chan, 0, DAC_CR_DMAEN);
    }
  else
#endif
    {
      /* Non-DMA transfer */

      putreg16(msg->am_data, chan->dro);
      dac_txdone(dev);
    }

  /* Reset counters (generate an update) */

#ifdef HAVE_DMA
  tim_modifyreg(chan, STM32L4_BTIM_EGR_OFFSET, 0, ATIM_EGR_UG);
#endif
  return OK;
}

FAR struct dac_dev_s *stm32l4_dacinitialize(int intf)
{
  FAR struct dac_dev_s    *dev;
  FAR struct stm32_chan_s *chan;
  int ret;

  switch (intf)
    {
#ifdef CONFIG_STM32L4_DAC1
      case 0:
        ainfo("DAC1-1 Selected\n");
        dev = &g_dac1dev;
        break;
#endif
#ifdef CONFIG_STM32L4_DAC2
      case 1:
        ainfo("DAC1-2 Selected\n");
        dev = &g_dac2dev;
        break;
#endif
      default:
        aerr("ERROR: No such DAC interface: %d\n", intf);
        return NULL;
    }

  /* Make sure that the DAC block has been initialized */

  dac_blockinit();

  /* Configure the selected DAC channel */

  chan = dev->ad_priv;
  ret  = dac_chaninit(chan);
  if (ret < 0)
    {
      aerr("ERROR: Failed to initialize DAC channel %d: %d\n", intf, ret);
      return NULL;
    }

  return dev;
}
