==> apache/nuttx/arch/arm/src/kinetis/kinetis_dac.c <==
#include <nuttx/config.h>
#include <debug.h>
#include <nuttx/analog/dac.h>
#include "arm_internal.h"             /* putreg... */
#include "hardware/kinetis_dac.h"     /* KINETIS_DAC... */
#include "hardware/kinetis_sim.h"     /* SIM_... */
#include "hardware/kinetis_vrefv1.h"  /* VREF_... */

static void dac_reset(struct dac_dev_s *dev)
{
  uint8_t  reg;
  uint32_t addr;

  dac_shutdown(dev);
  dac_setup(dev);

#if defined(CONFIG_KINETIS_DAC0)
  if (&g_dac0_dev == dev)
    {
      reg  = 0x00;
      addr = KINETIS_DAC0_DAT0L;
      while (addr < KINETIS_DAC0_SR)
        {
          putreg8(reg, addr);
          addr++;
        }

      putreg8(0x02, KINETIS_DAC0_SR);
      putreg8(0x00, KINETIS_DAC0_C0);
      putreg8(0x00, KINETIS_DAC0_C1);
      putreg8(0x0f, KINETIS_DAC0_C2);
    }
#endif /* defined(CONFIG_KINETIS_DAC0) */

#if defined(CONFIG_KINETIS_DAC1)
  if (&g_dac1_dev == dev)
    {
      reg  = 0x00;
      addr = KINETIS_DAC1_DAT0L;
      while (addr < KINETIS_DAC1_SR)
        {
          putreg8(reg, addr);
          addr++;
        }

      putreg8(0x02, KINETIS_DAC1_SR);
      putreg8(0x00, KINETIS_DAC1_C0);
      putreg8(0x00, KINETIS_DAC1_C1);
      putreg8(0x0f, KINETIS_DAC1_C2);
    }
#endif /* defined(CONFIG_KINETIS_DAC1) */
}

static int dac_send(struct dac_dev_s *dev, struct dac_msg_s *msg)
{
#if defined(CONFIG_KINETIS_DAC0)
  if (&g_dac0_dev == dev)
    {
      putreg8((uint8_t)((msg->am_data & 0x00ff) >> 0), KINETIS_DAC0_DAT0L);
      putreg8((uint8_t)((msg->am_data & 0xff00) >> 8), KINETIS_DAC0_DAT0H);
    }
#endif /* defined(CONFIG_KINETIS_DAC0) */

#if defined(CONFIG_KINETIS_DAC1)
  if (&g_dac1_dev == dev)
    {
      putreg8((uint8_t)((msg->am_data & 0x00ff) >> 0), KINETIS_DAC1_DAT0L);
      putreg8((uint8_t)((msg->am_data & 0xff00) >> 8), KINETIS_DAC1_DAT0H);
    }
#endif /* defined(CONFIG_KINETIS_DAC1) */

  dac_txdone(dev);
  return OK;
}

struct dac_dev_s *kinetis_dac_initialize(int which)
{
  switch (which)
    {
      case 0:
#if defined(CONFIG_KINETIS_DAC0)
        return &g_dac0_dev;
#else
        awarn("CONFIG_KINETIS_DAC0 must be defined");
        return NULL;
#endif
        break;
      case 1:
#if defined(CONFIG_KINETIS_DAC1)
        return &g_dac1_dev;
#else
        awarn("CONFIG_KINETIS_DAC1 must be defined");
        return NULL;
#endif
        break;
      default:
        awarn("Bad device specified, must be 0 <= %d <= 1", which);
    }

  return NULL;
}
